--- a/MyAppFF/app/src/main/res/layout/activity_list_friend_rq.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_list_friend_rq.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="haidang.com.myappff.ListFriendActivity">
+    tools:context="haidang.com.myappff.ListFriendRqActivity">
 
     <LinearLayout
         android:background="@color/colorPrimary"
+        android:id="@+id/layoutSearch"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <ImageButton
             android:layout_gravity="center"
-            android:id="@+id/btnBackLF"
+            android:id="@+id/btnBackFR"
             android:background="@null"
             android:layout_weight="2"
             android:src="@drawable/ic_back"
@@ -23,7 +25,7 @@
             android:textColor="#fff"
             android:textSize="24sp"
             android:gravity="center"
-            android:text="Danh sách bạn bè"
+            android:text="Danh sách kết bạn"
             android:layout_weight="8"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
@@ -32,7 +34,7 @@
     <ListView
         android:layout_margin="10dp"
         android:layout_weight="8"
-        android:id="@+id/listFriend"
+        android:id="@+id/listFriendRq"
         android:layout_width="match_parent"
         android:layout_height="0dp">
     </ListView>
