--- a/MyAppFF/app/src/main/res/layout/itemlistfriend.xml
+++ b/MyAppFF/app/src/main/res/layout/itemlistfriend.xml
@@ -1,49 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_marginTop="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="80dp">
 
-    <LinearLayout
-        android:layout_marginLeft="20dp"
-       android:layout_marginTop="5dp"
-        android:layout_weight="7"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="match_parent">
-        <TextView
-            android:textColor="@color/colorPrimary"
-            android:id="@+id/txtNameLF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Lê Hải Đăng"
-            android:textSize="24sp" />
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imgPicLF"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_margin="5dp"/>
 
         <TextView
+            android:layout_weight="6"
+            android:gravity="center_vertical"
             android:textStyle="italic"
             android:layout_marginLeft="10dp"
-            android:text="01267039616"
-            android:textSize="16sp"
-            android:id="@+id/txtPhoneLF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_weight="3"
-        android:layout_width="0dp"
-        android:layout_height="match_parent">
-        <ImageButton
-            android:id="@+id/btnMoreLF"
-            android:background="@null"
-            android:src="@drawable/ic_eyes"
-            android:layout_width="match_parent"
+            android:text=""
+            android:layout_margin="10dp"
+            android:textSize="20sp"
+            android:id="@+id/txtNameLF"
+            android:layout_width="0dp"
             android:layout_height="match_parent" />
-    </LinearLayout>
-
-
+       <Button
+           android:layout_margin="10dp"
+           android:id="@+id/btnKetBan"
+           android:textAllCaps="false"
+           android:textSize="12sp"
+           android:text="Kết bạn"
+           android:layout_weight="4"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content" />
 </LinearLayout>
