--- a/MyAppFF/app/src/main/res/layout/nav_header_main.xml
+++ b/MyAppFF/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coverpic"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="#000"
@@ -11,6 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
 
     <com.facebook.login.widget.ProfilePictureView
         android:id="@+id/imageProfilePicture"
