--- a/MyAppFF/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MyAppFF/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,36 +4,41 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_infor"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_infuser"
             android:title="Thông tin" />
         <item
             android:id="@+id/nav_friend"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_friends"
             android:title="Bạn bè" />
         <item
-            android:id="@+id/nav_findfriend"
-            android:icon="@drawable/ic_search"
-            android:title="Tìm kiếm" />
-        <item
             android:id="@+id/nav_friendrq"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_add_friend"
             android:title="Yêu cầu kết bạn" />
+        <item
+            android:id="@+id/nav_locationrq"
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="Chia sẽ vị trí" />
+
+        <item
+            android:id="@+id/nav_find_friend"
+            android:icon="@drawable/ic_search_friend"
+            android:title="Tìm kiếm bạn bè" />
 
     </group>
 
     <item android:title="">
         <menu>
             <item
-                android:id="@+id/nav_setting"
-                android:icon="@drawable/ic_menu_manage"
+                android:id="@+id/nav_inf"
+                android:icon="@drawable/ic_info"
                 android:title="Cài đặt" />
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_share"
                 android:title="Chia sẻ" />
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_logout"
                 android:title="Đăng xuất" />
         </menu>
     </item>
