--- a/MyAppFF/app/src/main/res/drawable/ic_logout.xml
+++ b/MyAppFF/app/src/main/res/drawable/ic_logout.xml
@@ -1,4 +1,4 @@
 <vector android:height="30dp" android:viewportHeight="24.0"
     android:viewportWidth="24.0" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff" android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+    <path android:fillColor="#FF000000" android:pathData="M11,9l1.42,1.42L8.83,14H18V4h2v12H8.83l3.59,3.58L11,21l-6,-6 6,-6z"/>
 </vector>
