--- a/MyAppFF/app/src/main/res/layout/activity_list_friend.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_list_friend.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="haidang.com.myappff.ListFriendActivity">
+    <ProgressBar
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:id="@+id/progressBarLF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:background="@color/colorPrimary"
@@ -14,27 +23,62 @@
         <ImageButton
             android:layout_gravity="center"
             android:id="@+id/btnBackLF"
-            android:background="@null"
+            android:background="@color/colorPrimary"
             android:layout_weight="2"
             android:src="@drawable/ic_back"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
-        <TextView
-            android:textColor="#fff"
-            android:textSize="24sp"
-            android:gravity="center"
-            android:text="Danh sách bạn bè"
-            android:layout_weight="8"
+        <FrameLayout
+            android:layout_weight="6"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="16sp"
+                android:paddingLeft="5dp"
+                android:textColor="@color/white"
+                android:gravity="left|center"
+                android:hint="Tìm kiếm"
+                android:textColorHint="@color/white"
+                android:id="@+id/edit"
+                android:background="@android:color/transparent" />
+            <ImageView
+                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/underlineeditext" />
+        </FrameLayout>
+        <ImageButton
+            android:background="@color/colorPrimary"
+            android:id="@+id/btnFind"
+            android:layout_weight="2"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            android:src="@drawable/ic_search"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
     </LinearLayout>
+    <TextView
+        android:textColor="@color/black"
+        android:layout_margin="5dp"
+        android:textSize="20sp"
+        android:text="Danh bạ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ListView
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:layout_margin="10dp"
         android:layout_weight="8"
         android:id="@+id/listFriend"
         android:layout_width="match_parent"
         android:layout_height="0dp">
     </ListView>
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
