--- a/MyAppFF/app/src/main/res/layout/activity_list_friend_rq.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_list_friend_rq.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="haidang.com.myappff.ListFriendRqActivity">
+    <ProgressBar
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:id="@+id/progressBarLFRQ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:background="@color/colorPrimary"
@@ -38,5 +47,5 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
     </ListView>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
