--- a/MyAppFF/app/src/main/res/layout/content_main.xml
+++ b/MyAppFF/app/src/main/res/layout/content_main.xml
@@ -8,11 +8,7 @@
     tools:context="haidang.com.myappff.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/layoutMap"
-        android:visibility="invisible">
+
         <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,15 +19,6 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            />
-    </LinearLayout>
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/btn_login_facebook"
-        android:layout_centerInParent="true"
-        android:text="  connect_with_facebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+            android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
