--- a/MyAppFF/app/src/main/res/layout/itemlistfriend.xml
+++ b/MyAppFF/app/src/main/res/layout/itemlistfriend.xml
@@ -14,13 +14,14 @@
         android:layout_margin="5dp"/>
 
         <TextView
+            android:textColor="@color/black"
             android:layout_weight="6"
             android:gravity="center_vertical"
             android:textStyle="italic"
             android:layout_marginLeft="10dp"
-            android:text=""
+            android:text="Lê Hải Đăng"
             android:layout_margin="10dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:id="@+id/txtNameLF"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
