--- a/MyAppFF/app/src/main/res/layout/nav_header_main.xml
+++ b/MyAppFF/app/src/main/res/layout/nav_header_main.xml
@@ -13,11 +13,15 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
-    <com.facebook.login.widget.ProfilePictureView
-        android:id="@+id/imageProfilePicture"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imgUser"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:border_width="2dp"
+        app:border_color="#fff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:layout_width="match_parent"
