--- a/MyAppFF/app/src/main/res/layout/activity_list_location_rq.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_list_location_rq.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="haidang.com.myappff.ListFriendActivity">
+    tools:context="haidang.com.myappff.ListLocationRqActivity">
     <ProgressBar
         android:visibility="gone"
         android:layout_centerInParent="true"
-        android:id="@+id/progressBarLF"
+        android:id="@+id/progressBarLLRq"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
@@ -23,7 +23,7 @@
             android:layout_height="60dp">
             <ImageButton
                 android:layout_gravity="center"
-                android:id="@+id/btnBackLF"
+                android:id="@+id/btnBackLocation"
                 android:background="@null"
                 android:src="@drawable/ic_back"
                 android:layout_width="60dp"
@@ -33,27 +33,42 @@
                 android:textColor="#fff"
                 android:textSize="24sp"
                 android:gravity="center"
-                android:text="Bạn bè"
+                android:text="Chia sẻ vị trí"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </RelativeLayout>
-    <TextView
-        android:textColor="@color/black"
-        android:layout_margin="5dp"
-        android:textSize="20sp"
-        android:text="Danh bạ"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <ListView
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="8"
-        android:id="@+id/listFriend"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-    </ListView>
+        <TextView
+            android:textColor="@color/black"
+            android:layout_margin="5dp"
+            android:textSize="20sp"
+            android:text="Yêu cầu vị trí"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ListView
+            android:layout_margin="10dp"
+            android:layout_weight="5"
+            android:id="@+id/listLocatinRq"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+        </ListView>
+        <ImageView
+            android:src="@drawable/line_blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textColor="@color/black"
+            android:layout_margin="5dp"
+            android:textSize="20sp"
+            android:text="Danh sách chia sẻ"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ListView
+            android:layout_margin="10dp"
+            android:layout_weight="5"
+            android:id="@+id/listSharedLocation"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+        </ListView>
     </LinearLayout>
-
 </RelativeLayout>
