--- a/MyAppFF/app/src/main/res/layout/activity_find_friend.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_find_friend.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <LinearLayout
+    <RelativeLayout
         android:background="@color/colorPrimary"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -23,17 +23,16 @@
             android:layout_gravity="center"
             android:id="@+id/btnBackFF"
             android:background="@color/colorPrimary"
-            android:layout_weight="2"
             android:src="@drawable/ic_back"
-            android:layout_width="0dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent" />
         <FrameLayout
-            android:layout_weight="6"
-            android:layout_width="0dp"
+            android:layout_centerInParent="true"
+            android:layout_width="210dp"
             android:layout_height="match_parent">
             <EditText
                 android:inputType="number"
-                android:layout_width="match_parent"
+                android:layout_width="210dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
@@ -47,22 +46,22 @@
                 android:background="@android:color/transparent" />
             <ImageView
                 android:layout_marginTop="40dp"
-                android:layout_width="match_parent"
+                android:layout_width="210dp"
                 android:layout_height="10dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/underlineeditext" />
         </FrameLayout>
         <ImageButton
+            android:layout_alignParentRight="true"
             android:background="@color/colorPrimary"
             android:id="@+id/btnFindFriend"
-            android:layout_weight="2"
             android:textAllCaps="false"
             android:textSize="14sp"
             android:src="@drawable/ic_search"
-            android:layout_width="0dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </RelativeLayout>
     <ListView
         android:layout_margin="10dp"
         android:id="@+id/listFindFriend"
