--- a/MyAppFF/app/src/main/res/layout/itemlocationrq.xml
+++ b/MyAppFF/app/src/main/res/layout/itemlocationrq.xml
@@ -5,7 +5,7 @@
     android:layout_height="80dp">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_gravity="center"
-        android:id="@+id/imgPicFR"
+        android:id="@+id/imgPicLocationRq"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="5dp"/>
@@ -18,12 +18,12 @@
         android:text=""
         android:layout_margin="10dp"
         android:textSize="20sp"
-        android:id="@+id/txtNameFR"
+        android:id="@+id/txtNameLocationRq"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
     <Button
         android:layout_margin="10dp"
-        android:id="@+id/btnChapNhanFR"
+        android:id="@+id/btnChapNhanLocationRq"
         android:textAllCaps="false"
         android:textSize="12sp"
         android:text="Chấp nhận"
