--- a/MyAppFF/app/src/main/res/layout/activity_edit_inf.xml
+++ b/MyAppFF/app/src/main/res/layout/activity_edit_inf.xml
@@ -3,33 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="haidang.com.myappff.InfUserActivity">
+    tools:context="haidang.com.myappff.EditInfActivity">
 
     <ProgressBar
         android:layout_centerInParent="true"
         android:visibility="gone"
-        android:id="@+id/progressBarUser"
+        android:id="@+id/progressBarUserEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/progressBarUser">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgCoverUser"
+                android:id="@+id/imgCoverUserEdit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgAvatarUser"
+                android:id="@+id/imgAvatarUserEdit"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentLeft="true"
@@ -45,15 +43,31 @@
             android:layout_weight="8"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvNameUser"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvNameUserEdit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="Tên hiển thị"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/edtNameUserEdit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="7"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -62,7 +76,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvNSUser"
+                    android:id="@+id/tvNSUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
@@ -70,8 +84,8 @@
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/txtNgaysinhUser"
+                <EditText
+                    android:id="@+id/edtNgaysinhUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -88,7 +102,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvSDTUser"
+                    android:id="@+id/tvSDTUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
@@ -96,8 +110,8 @@
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/txtDienthoaiUser"
+                <EditText
+                    android:id="@+id/edtDienthoaiUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -114,7 +128,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvEmailUser"
+                    android:id="@+id/tvEmailUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
@@ -122,8 +136,8 @@
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/txtEmailUser"
+                <EditText
+                    android:id="@+id/edtEmailUserEdit"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -139,7 +153,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <Button
-                android:id="@+id/btnEdit"
+                android:id="@+id/btnLuuEdit"
                 android:layout_margin="10dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
@@ -147,11 +161,11 @@
                 android:textSize="20sp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:text="Chỉnh sửa"
+                android:text="Cập nhật"
                 android:layout_width="150dp"
                 android:layout_height="50dp" />
             <Button
-                android:id="@+id/btnXoaTK"
+                android:id="@+id/btnHuyEdit"
                 android:layout_margin="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
@@ -159,7 +173,7 @@
                 android:textSize="20sp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:text="Xóa tài khoản"
+                android:text="Hủy"
                 android:layout_width="150dp"
                 android:layout_height="50dp" />
         </RelativeLayout>
