--- a/MyAppFF/app/src/main/res/layout/itemfriendrq.xml
+++ b/MyAppFF/app/src/main/res/layout/itemfriendrq.xml
@@ -11,7 +11,7 @@
         android:layout_margin="5dp"/>
 
     <TextView
-        android:layout_weight="6"
+        android:layout_weight="5"
         android:gravity="center_vertical"
         android:textStyle="italic"
         android:layout_marginLeft="10dp"
@@ -21,13 +21,30 @@
         android:id="@+id/txtNameFR"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
-    <Button
-        android:layout_margin="10dp"
-        android:id="@+id/btnChapNhanFR"
-        android:textAllCaps="false"
-        android:textSize="12sp"
-        android:text="Chấp nhận"
-        android:layout_weight="4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
+
+        <Button
+            android:background="@drawable/style_btn"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:id="@+id/btnChapNhanFR"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:text="Đồng ý"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="35dp" />
+        <ImageButton
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:id="@+id/btnXoaFR"
+            android:textAllCaps="false"
+            android:textSize="12sp"
+            android:src="@drawable/ic_close_black_24dp"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="35dp" />
+
+
 </LinearLayout>
